--- a/src/components/Navigation/Navigation.scss
+++ b/src/components/Navigation/Navigation.scss
@@ -1,21 +1,40 @@
-.navigation {
+@use '../styles/variables' as *;
+.main-nav {
   display: flex;
   align-items: center;
-  justify-content: space-between;
-  padding: 1rem;
-  background-color: black;
+  justify-content: center;
+  font-size: 2rem;
 
-  .logo-left {
-    color: white;
-  }
-
-  .items-right {
+  .navigation {
+    width: 120rem;
     display: flex;
-    gap: 2rem;
+    align-items: center;
+    justify-content: space-between;
+    padding: 2rem;
+    background-color: $background-color;
 
-    .link {
-      text-decoration: none;
-      color: white;
+    .logo-left {
+      color: $text-color;
+      font-weight: bold;
+      letter-spacing: 0.7px;
+    }
+
+    .items-right {
+      display: flex;
+      gap: 3rem;
+
+      .link {
+        text-decoration: none;
+        color: $text-color;
+        font-weight: bold;
+        letter-spacing: 0.7px;
+        transition: all 0.2s ease-in;
+      }
+
+      .link:hover,
+      .link:active {
+        color: $baby-blue;
+      }
     }
   }
 }
