--- a/src/components/styles/_mixins.scss
+++ b/src/components/styles/_mixins.scss
@@ -6,7 +6,9 @@
   padding: 1.5rem;
   border-radius: 5px;
   font-size: 1.4rem;
-
+  width: 100%;
+  font-weight: 600;
+  letter-spacing: 1.2px;
   &:hover {
     background-color: darken($bg-color, 10%);
   }
