--- a/src/components/styles/_variables.scss
+++ b/src/components/styles/_variables.scss
@@ -5,3 +5,5 @@ $ligher-blue: #007ea7;
 $baby-blue: #00a8e8;
 $light-blue: #cce4f0;
 $text-color: #f8f9fa;
+$text-color-darker-500: #dfe0e1;
+$text-color-darker-600: #c6c7c8;
