--- a/src/components/Main/ChatRoom.scss
+++ b/src/components/Main/ChatRoom.scss
@@ -6,11 +6,27 @@
   align-items: center;
   justify-content: center;
 
+  .back-to-rooms {
+    color: $text-color;
+    font-size: 1.6rem;
+    margin-top: 4.8rem;
+    margin-bottom: 9.6rem;
+
+    text-decoration: none;
+
+    color: $baby-blue;
+  }
+
+  .back-to-rooms.link {
+    font-size: 1.4rem;
+    color: $ligher-blue;
+  }
+
   .room-flex {
     display: flex;
     align-items: center;
     justify-content: center;
-    color: white;
+    color: $text-color;
     font-size: 3rem;
   }
 }
@@ -19,6 +35,7 @@
   display: flex;
   flex-direction: column;
   gap: 2rem;
+  margin-bottom: 7.6rem;
 
   .message-time {
     font-size: 1.4rem;
