working on editing messages

--- a/src/components/Main/ChatRoom.scss
+++ b/src/components/Main/ChatRoom.scss
@@ -110,3 +110,14 @@
 .message-loading {
   font-size: 3rem;
 }
+
+.message-input {
+  padding: 1rem;
+  width: 30rem;
+  border-radius: 10px;
+  border: 0;
+  word-wrap: break-word;
+  min-width: 55.4rem;
+  max-width: 55.4rem;
+  margin-left: 2rem;
+}
