--- a/src/components/Main/ChatRoom.scss
+++ b/src/components/Main/ChatRoom.scss
@@ -133,3 +133,41 @@
   max-width: 55.4rem;
   margin-left: 2rem;
 }
+
+dialog {
+  border: none;
+  font-size: 2.6rem;
+  border-radius: 8px;
+  text-align: center;
+  padding: 20px;
+  width: 80%;
+  max-width: 500px;
+  background-color: white;
+  position: fixed;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  z-index: 1000; /* This should be higher than the z-index of all other elements */
+
+  .dialog-content {
+    display: flex;
+    flex-direction: column;
+
+    gap: 3rem;
+  }
+}
+
+.flex-div-buttons {
+  display: flex;
+  gap: 2rem;
+  justify-content: center;
+
+  .large {
+    font-size: 2rem;
+  }
+
+  .large:active,
+  .large:hover {
+    transform: scale(1.05);
+  }
+}
