--- a/src/components/Main/ChatRoom.scss
+++ b/src/components/Main/ChatRoom.scss
@@ -15,8 +15,8 @@
   .back-to-rooms {
     color: $text-color;
     font-size: 1.6rem;
-    margin-top: 4.8rem;
-    margin-bottom: 9.6rem;
+    // margin-top: 4.8rem;
+    // margin-bottom: 9.6rem;
 
     text-decoration: none;
 
@@ -36,7 +36,7 @@
   .room-flex {
     display: flex;
     align-items: center;
-
+    margin-top: 9.6rem;
     justify-content: center;
     color: $text-color;
     font-size: 3rem;
@@ -86,15 +86,14 @@
   margin-top: 6rem;
   display: flex;
   gap: 1rem;
-
-  input {
-    padding: 1rem;
-    width: 30rem;
-    border-radius: 10px;
-    border: 0;
-  }
 }
 
+input {
+  padding: 1rem;
+  width: 30rem;
+  border-radius: 10px;
+  border: 0;
+}
 .message-content {
   display: flex;
   align-items: center;
@@ -157,17 +156,25 @@ dialog {
   }
 }
 
+.button.large {
+  font-size: 1.8rem;
+}
+
 .flex-div-buttons {
   display: flex;
   gap: 2rem;
   justify-content: center;
 
-  .large {
-    font-size: 2rem;
-  }
-
   .large:active,
   .large:hover {
     transform: scale(1.05);
   }
+}
+
+.back-delete-flex {
+  margin-top: 4.8rem;
+  gap: 1rem;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
