--- a/src/components/Main/ChatRoom.scss
+++ b/src/components/Main/ChatRoom.scss
@@ -40,10 +40,13 @@
 
 .room-all-messages {
   max-height: 45rem;
+  min-height: 45rem;
   overflow-y: auto;
-  // display: flex;
+  display: flex;
   flex-direction: column;
-  gap: 5rem;
+  align-items: center;
+  justify-content: center;
+  gap: 1rem;
   margin-bottom: 7.6rem;
 }
 
