--- a/src/components/Main/Home.scss
+++ b/src/components/Main/Home.scss
@@ -23,6 +23,10 @@
 }
 
 .home-welcome {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
   color: white;
   font-size: 1.8rem;
   // background-color: white;
@@ -32,8 +36,11 @@
 .home-rooms {
   display: flex;
   flex-direction: column;
+  align-items: center;
+  justify-content: center;
   max-height: 45rem;
-  overflow: scroll;
+  min-height: 45rem;
+  overflow: auto;
   gap: 3rem;
 }
 
@@ -70,4 +77,9 @@
 input:focus {
   outline: none;
   border: none;
+}
+
+.error-label {
+  font-size: 1.4rem;
+  color: rgb(233, 85, 85);
 }
