--- a/src/components/Main/Home.scss
+++ b/src/components/Main/Home.scss
@@ -36,7 +36,7 @@
 .home-rooms {
   display: flex;
   flex-direction: column;
-  align-items: center;
+  align-items: flex-start;
   justify-content: center;
   max-height: 45rem;
   min-height: 45rem;
